Create a logger interface to wrap around the other loggers

--- a/bootstrap/bukkit/src/main/resources/plugin.yml
+++ b/bootstrap/bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ${name}
 version: ${version}
-main: dev.triassic.template.bukkit.TemplateBukkit
+main: dev.triassic.template.bukkit.TemplateBukkitPlugin
 description: ${description}
 author: ${author}
 website: ${url}
