--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ bungeecord = "1.19-R0.1-SNAPSHOT"
 cloud = "2.0.0-beta.8"
 cloud-core = "2.0.0-rc.2"
 configurate = "4.2.0-GeyserMC-SNAPSHOT"
+geyser = "2.4.4-SNAPSHOT"
 indra = "3.1.3"
 paper = "1.19.4-R0.1-SNAPSHOT"
 lombok = "1.18.34"
@@ -18,6 +19,7 @@ bungeecord-api = { group = "net.md-5", name = "bungeecord-api", version.ref = "b
 cloud-core = { group = "org.incendo", name = "cloud-core", version.ref = "cloud-core" }
 cloud-minecraft-extras = { group = "org.incendo", name = "cloud-minecraft-extras", version.ref = "cloud" }
 configurate-yaml = { group = "org.spongepowered", name = "configurate-yaml", version.ref = "configurate" }
+geyser-api = { group = "org.geysermc.geyser", name = "api", version.ref = "geyser" }
 slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
 paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
