Revert a naming change

--- a/bootstrap/bukkit/src/main/resources/plugin.yml
+++ b/bootstrap/bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ${name}
 version: ${version}
-main: dev.triassic.template.bukkit.TemplateBukkitPlugin
+main: dev.triassic.template.bukkit.TemplateBukkit
 description: ${description}
 author: ${author}
 website: ${url}
