--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 adventure = "4.17.0"
+cloud-minecraft = "2.0.0-beta.10"
 
 [plugins]
 blossom = { id = "net.kyori.blossom", version = "2.1.0" }
@@ -8,11 +9,15 @@ indra-git = { id = "net.kyori.indra.git", version = "3.1.3" }
 [libraries]
 # Adventure Libraries
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
+adventure-bungeecord = { group = "net.kyori", name = "adventure-platform-bungeecord", version = "4.3.4" }
 adventure-minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure" }
 
 # Cloud Libraries
+cloud-bungeecord = { group = "org.incendo", name = "cloud-bungee", version.ref = "cloud-minecraft" }
 cloud-core = { group = "org.incendo", name = "cloud-core", version = "2.0.0" }
-cloud-minecraft-extras = { group = "org.incendo", name = "cloud-minecraft-extras", version = "2.0.0-beta.10" }
+cloud-minecraft-extras = { group = "org.incendo", name = "cloud-minecraft-extras", version.ref = "cloud-minecraft" }
+cloud-paper = { group = "org.incendo", name = "cloud-paper", version.ref = "cloud-minecraft" }
+cloud-velocity = { group = "org.incendo", name = "cloud-velocity", version.ref = "cloud-minecraft" }
 
 # Config and YAML Libraries
 configurate-yaml = { group = "org.spongepowered", name = "configurate-yaml", version = "4.2.0-GeyserMC-SNAPSHOT" }
