--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 adventure = "4.17.0"
+adventure-platform = "4.3.4"
 cloud-minecraft = "2.0.0-beta.10"
 
 [plugins]
@@ -9,7 +10,8 @@ indra-git = { id = "net.kyori.indra.git", version = "3.1.3" }
 [libraries]
 # Adventure Libraries
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
-adventure-bungeecord = { group = "net.kyori", name = "adventure-platform-bungeecord", version = "4.3.4" }
+adventure-bukkit = { group = "net.kyori", name = "adventure-platform-bukkit", version.ref = "adventure-platform" }
+adventure-bungeecord = { group = "net.kyori", name = "adventure-platform-bungeecord", version.ref = "adventure-platform" }
 adventure-minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure" }
 
 # Cloud Libraries
