Use plugin-yml to generate plugin yml files

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 group=dev.triassic
 version=1.0.0-SNAPSHOT
 description=A multi-platform template plugin for Minecraft servers.
+author=Triassic
+url=https://triassic.dev
 
 # Gradle Properties
 org.gradle.parallel=true
