Move registration of commands to command registry

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-# Project Properties
+# Project properties
 group=dev.triassic
 version=1.0.0-SNAPSHOT
 description=A multi-platform template plugin for Minecraft servers.
 author=Triassic
 url=https://triassic.dev
 
-# Gradle Properties
+# Gradle properties
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
