--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=dev.triassic
 version=1.0.0-SNAPSHOT
 description=A multi-platform template plugin for Minecraft servers.
 author=Triassic
-url=https://triassic.dev
+url=https://github.com/RealTriassic/plugin-template
 
 # Gradle properties
 org.gradle.caching=true
