--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-adventure = "4.18.0"
-adventure-platform = "4.3.4"
-cloud-minecraft = "2.0.0-beta.10"
-slf4j = "2.0.16"
+adventure = "4.24.0"
+adventure-platform = "4.4.1"
+cloud-minecraft = "2.0.0-beta.11"
+slf4j = "2.0.17"
 
 [plugins]
 blossom = { id = "net.kyori.blossom", version = "2.1.0" }
-indra-git = { id = "net.kyori.indra.git", version = "3.1.3" }
+indra-git = { id = "net.kyori.indra.git", version = "3.2.0" }
 
 [libraries]
 # Adventure Libraries
@@ -36,7 +36,7 @@ paper-api = { group = "io.papermc.paper", name = "paper-api", version = "1.20.6-
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version = "3.4.0-SNAPSHOT" }
 
 # Gradle Plugins
-checkstyle = { group = "com.puppycrawl.tools", name = "checkstyle", version = "10.20.1" }
-lombok-plugin = { group = "io.freefair.gradle", name = "lombok-plugin", version = "8.10.2" }
+checkstyle = { group = "com.puppycrawl.tools", name = "checkstyle", version = "11.0.1" }
+lombok-plugin = { group = "io.freefair.gradle", name = "lombok-plugin", version = "8.14.2" }
 shadow-plugin = { group = "com.gradleup.shadow", name = "shadow-gradle-plugin", version = "9.1.0" }
-spotless-plugin = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version = "7.0.0.BETA4" }
+spotless-plugin = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version = "7.2.1" }
