Enable gradle configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,6 @@ url=https://github.com/RealTriassic/plugin-template
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+org.gradle.configuration-cache=true
 
 org.gradle.warning.mode=all
