--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ slf4j = "2.0.17"
 
 [plugins]
 blossom = { id = "net.kyori.blossom", version = "2.1.0" }
-indra-git = { id = "net.kyori.indra.git", version = "3.2.0" }
+indra-git = { id = "net.kyori.indra.git", version = "4.0.0-SNAPSHOT" }
 
 [libraries]
 # Adventure Libraries
