[ci skip] Begin work on Fabric/NeoForge modules using Architectury

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@ url=https://github.com/RealTriassic/plugin-template
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 org.gradle.configuration-cache.parallel=true
+org.gradle.jvmargs=-Xmx2G
 
 org.gradle.warning.mode=all
