--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,6 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 
 org.gradle.warning.mode=all
