--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,7 @@ slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
 slf4j-jdk14 = { group = "org.slf4j", name = "slf4j-jdk14", version.ref = "slf4j" }
 
 # Server APIs
-bungeecord-api = { group = "net.md-5", name = "bungeecord-api", version = "1.19-R0.1-SNAPSHOT" }
+bungeecord-api = { group = "net.md-5", name = "bungeecord-api", version = "1.21-R0.1" }
 spigot-api = { group = "org.spigotmc", name = "spigot-api", version = "1.20.6-R0.1-SNAPSHOT" }
 paper-api = { group = "io.papermc.paper", name = "paper-api", version = "1.20.6-R0.1-SNAPSHOT" }
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version = "3.4.0-SNAPSHOT" }
