--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ org.gradle.configureondemand=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
 
+org.gradle.jvmargs=-Xmx2G
 org.gradle.warning.mode=all
