--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ org.gradle.configureondemand=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
 
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx2G -Dfile.encoding=UTF-8
 org.gradle.warning.mode=all
